Number guessing Game

--- a/Project04/index.html
+++ b/Project04/index.html
@@ -20,8 +20,8 @@
             </form>
 
             <div class="resultParas">
-                <p>Previous guess : </p><span><div class="guesses"></div></span>
-                <p>guesses Remaining: </p><div class="lastResult">10</div></span>
+                <p id="prev">Previous guess : </p><span><div class="guesses"></div></span>
+                <p id="last">guesses Remaining :  </p><span><div class="lastResult"> 10</div></span>
                 <p><div class="lowOrHi"></div></p>
             </div>
         </div>
